# riscyos

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: riscv64-unknown-elf-toolchain.cmake
include/: config.h.in
include/drivers/: device.h  uart.h
include/kernel/: device_manager.h  interrupt.h  logger.h  mutex.h  putchar.h  syscall.h  timer.h
include/lib/: string.h
src/: CMakeLists.txt
src/arch/riscv/: CMakeLists.txt
src/arch/riscv/boot/: linker.ld  start.S
src/arch/riscv/traps/: trap.S
src/drivers/uart/: CMakeLists.txt  uart.c  uart_log_sink.c
src/kernel/: CMakeLists.txt  device_manager.c  interrupt.c  logger.c  main.c  mutex.c  putchar.c  syscall.c  timer.c  trap.c
src/lib/: CMakeLists.txt  printf.c  string.c
